test/sema/typeck/module/keyword-in-path.out
error: module expected.
--> keyword-in-path.dora:2:15
 | mod foo { fn bar() {} }
 | fn f() { foo::super::bar(); }
                 ~~~~~
 | 
1 error found.
