test/sema/typeck/module/keyword-in-path.dora
mod foo { fn bar() {} }
fn f() { foo::super::bar(); }
